Colaboratory を使用して作成しました

--- a/Github_Clone_Push_file.ipynb
+++ b/Github_Clone_Push_file.ipynb
@@ -5,13 +5,9 @@
     "colab": {
       "name": "Github-Clone-Push-file.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "ZunW8-_WpOh3",
-        "EmmzKuL8vKx_",
-        "H0L1L2l2rpgO"
-      ],
+      "collapsed_sections": [],
       "mount_file_id": "10BS2Z2O4imqJVG8Ufqyx3B22R8rNPbs_",
-      "authorship_tag": "ABX9TyMcDCz1oxdXhM+6Fjq/ZTh5",
+      "authorship_tag": "ABX9TyNrz+MDtUSlAe27kSrHpmoc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +56,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "544844c0-982b-4db7-d109-9a5f26911b41"
+        "outputId": "594c690d-ebb4-4d72-bca7-c377fcbb54c4"
       },
       "source": [
         "%env REPO_NAME= coleridgeinitiative-show-us-the-data  \n",
@@ -84,7 +80,7 @@
         "\n",
         "os.environ['PASS'] = json_load['secrets']['pass']"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,8 +168,7 @@
       },
       "source": [
         "# Kaggleからデータセットのダウンロード\n",
-        "<p><font size=4 color=orangered>ファイル数が多いとGoogle Driveへの反映に大分時差が出るので注意!!</p>\n",
-        "<p>段々ドライブに保存されているファイル数増えていくの安心して</p>"
+        "<p><font size=4 color=orangered>ファイル数が多いとGoogle Driveへの反映に大分時差が出ることがあるので注意!!</p>\n"
       ]
     },
     {
@@ -183,7 +178,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BQ2MGJInC9mb",
-        "outputId": "d8b0ef9d-507d-4ce8-97e2-dbdea3cc3a1a"
+        "outputId": "40e265dd-9958-41ca-96f9-fc7cd09bf590"
       },
       "source": [
         "# データのダウンロード\n",
@@ -213,7 +208,7 @@
         "    print(\"Download %d%%.\" % int(status.progress() * 100))\n",
         "os.chmod(filename, 600)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +222,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b6-2hsF3DknB"
+        "id": "b6-2hsF3DknB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8d270fd9-d034-4af1-b985-49dfb3a63a9c"
       },
       "source": [
         "!pip install --upgrade --force-reinstall --no-deps kaggle\n",
@@ -236,11 +235,37 @@
         "!kaggle competitions download -c $REPO_NAME \\\n",
         "--path /content/drive/MyDrive/kaggle/works/$REPO_NAME/input/$REPO_NAME\n",
         "\n",
-        "!unzip -o \"/content/drive/MyDrive/kaggle/works/$REPO_NAME/input/$REPO_NAME/$REPO_NAME.zip\" -d \"/content/drive/MyDrive/kaggle/works/$REPO_NAME/input/$REPO_NAME/\" \n",
+        "%cd /content/drive/MyDrive/kaggle/works/$REPO_NAME/input/$REPO_NAME\n",
+        "# 解凍先のdirに移動する　unzipの -d オプションで解凍先のディレクトリを指定した場合、ファイル数が多すぎるとバグるので、先に移動しておく\n",
+        "!unzip -o \"/content/drive/MyDrive/kaggle/works/$REPO_NAME/input/$REPO_NAME/$REPO_NAME.zip\" \n",
+        "%cd /content/drive/MyDrive/kaggle/works/\n",
         "!rm -f \"/content/drive/MyDrive/kaggle/works/$REPO_NAME/input/$REPO_NAME/$REPO_NAME.zip\""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting kaggle\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/3a/e7/3bac01547d2ed3d308ac92a0878fbdb0ed0f3d41fb1906c319ccbba1bfbc/kaggle-1.5.12.tar.gz (58kB)\n",
+            "\r\u001b[K     |█████▋                          | 10kB 15.1MB/s eta 0:00:01\r\u001b[K     |███████████▏                    | 20kB 13.9MB/s eta 0:00:01\r\u001b[K     |████████████████▊               | 30kB 9.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████▎         | 40kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▉    | 51kB 5.2MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 61kB 3.3MB/s \n",
+            "\u001b[?25hBuilding wheels for collected packages: kaggle\n",
+            "  Building wheel for kaggle (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for kaggle: filename=kaggle-1.5.12-cp37-none-any.whl size=73053 sha256=384bf0bf2098fda9bdf141b3e037068a14ef90ceadd533ccfc1df2a66a75f449\n",
+            "  Stored in directory: /root/.cache/pip/wheels/a1/6a/26/d30b7499ff85a4a4593377a87ecf55f7d08af42f0de9b60303\n",
+            "Successfully built kaggle\n",
+            "Installing collected packages: kaggle\n",
+            "  Found existing installation: kaggle 1.5.12\n",
+            "    Uninstalling kaggle-1.5.12:\n",
+            "      Successfully uninstalled kaggle-1.5.12\n",
+            "Successfully installed kaggle-1.5.12\n",
+            "Downloading coleridgeinitiative-show-us-the-data.zip to /content/drive/MyDrive/kaggle/works/coleridgeinitiative-show-us-the-data/input/coleridgeinitiative-show-us-the-data\n",
+            " 97% 202M/208M [00:02<00:00, 70.1MB/s]\n",
+            "100% 208M/208M [00:02<00:00, 83.3MB/s]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
