--- a/Github_Clone_Push_file.ipynb
+++ b/Github_Clone_Push_file.ipynb
@@ -5,9 +5,14 @@
     "colab": {
       "name": "Github-Clone-Push-file.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "ZunW8-_WpOh3",
+        "5nnC41920vls",
+        "EmmzKuL8vKx_",
+        "H0L1L2l2rpgO"
+      ],
       "mount_file_id": "10BS2Z2O4imqJVG8Ufqyx3B22R8rNPbs_",
-      "authorship_tag": "ABX9TyNrz+MDtUSlAe27kSrHpmoc",
+      "authorship_tag": "ABX9TyPurfEgc4zEIq0BBQYwOvyB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,8 +50,9 @@
         "<p><font size=\"3\">/content/drive/MyDrive/kaggle/works/</p>\n",
         "<p><font size=\"3\">となっています</p>\n",
         "\n",
-        "<p><font size=\"3\">JSONファイルの想定フォーマットは一番下にサンプルを記載してあります</p>\n",
-        "\n"
+        "<p><font size=\"3\">JSONファイルの想定フォーマットは一番下にサンプルを記載してあります </p>\n",
+        "\n",
+        "<p><font size=\"5\" color=\"orange\">1. 環境変数の設定</p>\n"
       ]
     },
     {
@@ -56,10 +62,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "594c690d-ebb4-4d72-bca7-c377fcbb54c4"
+        "outputId": "ed15693d-ec55-4632-d678-e5cc353109a5"
       },
       "source": [
-        "%env REPO_NAME= coleridgeinitiative-show-us-the-data  \n",
+        "%env REPO_NAME= commonlitreadabilityprize\n",
         "# <=====　ここの値を現在のリポジトリ名(=kaggleコンペ名)に変更！！！\n",
         "\n",
         "import os\n",
@@ -67,11 +73,12 @@
         "\n",
         "REPO_NAME = os.environ['REPO_NAME'] #%cdコマンド内では $ で環境変数ではなく、Pythonで定義された変数にアクセスするため代入しておく\n",
         "!echo $REPO_NAME\n",
-        "# Jupyterでは環境変数設定で　$ !export は使えないので注意\n",
+        "\n",
         "\n",
         "%cd /content/drive/MyDrive/kaggle/works\n",
         "\n",
         "# 環境変数の設定\n",
+        "# Jupyterでは環境変数設定で　$ !export は使えないので注意\n",
         "json_open = open('./env.json', 'r')\n",
         "json_load = json.load(json_open)\n",
         "\n",
@@ -80,13 +87,13 @@
         "\n",
         "os.environ['PASS'] = json_load['secrets']['pass']"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "env: REPO_NAME=coleridgeinitiative-show-us-the-data\n",
-            "coleridgeinitiative-show-us-the-data\n",
+            "env: REPO_NAME=commonlitreadabilityprize\n",
+            "commonlitreadabilityprize\n",
             "/content/drive/MyDrive/kaggle/works\n"
           ],
           "name": "stdout"
@@ -99,7 +106,10 @@
         "id": "ZunW8-_WpOh3"
       },
       "source": [
-        "# Clone or Pull リポジトリ"
+        "# <p><font size=\"5\">2. Cloneリポジトリ<p>\n",
+        "<p><font size=\"5\">3. Kaggleからデータセットのダウンロード</p>\n",
+        "\n",
+        "<p><font size=\"3\" color=\"red\">初回のみ必要な操作です</p>"
       ]
     },
     {
@@ -109,7 +119,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LDvgnGYBpJpS",
-        "outputId": "108787fe-e3d6-4361-ef6e-9e324dbe6019"
+        "outputId": "8702d6a2-a00f-470f-baa8-dfb9b077aec8"
       },
       "source": [
         "%cd /content/drive/MyDrive/kaggle/works\n",
@@ -125,12 +135,12 @@
           "output_type": "stream",
           "text": [
             "/content/drive/MyDrive/kaggle/works\n",
-            "Cloning into 'coleridgeinitiative-show-us-the-data'...\n",
-            "remote: Enumerating objects: 18, done.\u001b[K\n",
-            "remote: Counting objects: 100% (18/18), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (15/15), done.\u001b[K\n",
-            "remote: Total 18 (delta 5), reused 11 (delta 1), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (18/18), done.\n"
+            "Cloning into 'commonlitreadabilityprize'...\n",
+            "remote: Enumerating objects: 11, done.\u001b[K\n",
+            "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (10/10), done.\u001b[K\n",
+            "remote: Total 11 (delta 2), reused 6 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (11/11), done.\n"
           ],
           "name": "stdout"
         }
@@ -139,36 +149,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5nnC41920vls"
+        "id": "YRlPEVwG-ysw"
       },
       "source": [
-        "<p><font size=5>Pull</p>\n",
-        "<p><font color=orangered>現在のDrive内のリポジトリの状態を無視して強制Pullします</p>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "OOXqpwUodlbN"
-      },
-      "source": [
-        "%cd /content/drive/MyDrive/kaggle/works/$REPO_NAME\n",
-        "\n",
-        "# ローカルの内容に未保存の変更があったとしても、強制的にリモートに同期する\n",
-        "!git fetch origin\n",
-        "!git reset --hard origin/main"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gtfx8EqsdVdt"
-      },
-      "source": [
-        "# Kaggleからデータセットのダウンロード\n",
-        "<p><font size=4 color=orangered>ファイル数が多いとGoogle Driveへの反映に大分時差が出ることがあるので注意!!</p>\n"
+        "<p><font size=4 color=orangered>ファイル数が多いとGoogle Driveへの反映に大分時差が出ることがあるので注意!!</p>"
       ]
     },
     {
@@ -178,7 +162,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BQ2MGJInC9mb",
-        "outputId": "40e265dd-9958-41ca-96f9-fc7cd09bf590"
+        "outputId": "6d5c5377-9e50-4a88-b07f-d8da3629fb25"
       },
       "source": [
         "# データのダウンロード\n",
@@ -208,7 +192,7 @@
         "    print(\"Download %d%%.\" % int(status.progress() * 100))\n",
         "os.chmod(filename, 600)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,7 +210,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8d270fd9-d034-4af1-b985-49dfb3a63a9c"
+        "outputId": "d43d9b76-94d9-4f3b-eff5-bd3c50e2bef3"
       },
       "source": [
         "!pip install --upgrade --force-reinstall --no-deps kaggle\n",
@@ -241,17 +225,17 @@
         "%cd /content/drive/MyDrive/kaggle/works/\n",
         "!rm -f \"/content/drive/MyDrive/kaggle/works/$REPO_NAME/input/$REPO_NAME/$REPO_NAME.zip\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting kaggle\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/3a/e7/3bac01547d2ed3d308ac92a0878fbdb0ed0f3d41fb1906c319ccbba1bfbc/kaggle-1.5.12.tar.gz (58kB)\n",
-            "\r\u001b[K     |█████▋                          | 10kB 15.1MB/s eta 0:00:01\r\u001b[K     |███████████▏                    | 20kB 13.9MB/s eta 0:00:01\r\u001b[K     |████████████████▊               | 30kB 9.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████▎         | 40kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▉    | 51kB 5.2MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 61kB 3.3MB/s \n",
+            "\r\u001b[K     |█████▋                          | 10kB 15.4MB/s eta 0:00:01\r\u001b[K     |███████████▏                    | 20kB 9.6MB/s eta 0:00:01\r\u001b[K     |████████████████▊               | 30kB 7.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████▎         | 40kB 7.0MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▉    | 51kB 4.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 61kB 3.0MB/s \n",
             "\u001b[?25hBuilding wheels for collected packages: kaggle\n",
             "  Building wheel for kaggle (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for kaggle: filename=kaggle-1.5.12-cp37-none-any.whl size=73053 sha256=384bf0bf2098fda9bdf141b3e037068a14ef90ceadd533ccfc1df2a66a75f449\n",
+            "  Created wheel for kaggle: filename=kaggle-1.5.12-cp37-none-any.whl size=73053 sha256=5cb9342cb738229c48df588722cca544368fc9636761a2b8b88627a76a36b9b0\n",
             "  Stored in directory: /root/.cache/pip/wheels/a1/6a/26/d30b7499ff85a4a4593377a87ecf55f7d08af42f0de9b60303\n",
             "Successfully built kaggle\n",
             "Installing collected packages: kaggle\n",
@@ -259,9 +243,15 @@
             "    Uninstalling kaggle-1.5.12:\n",
             "      Successfully uninstalled kaggle-1.5.12\n",
             "Successfully installed kaggle-1.5.12\n",
-            "Downloading coleridgeinitiative-show-us-the-data.zip to /content/drive/MyDrive/kaggle/works/coleridgeinitiative-show-us-the-data/input/coleridgeinitiative-show-us-the-data\n",
-            " 97% 202M/208M [00:02<00:00, 70.1MB/s]\n",
-            "100% 208M/208M [00:02<00:00, 83.3MB/s]\n"
+            "Downloading commonlitreadabilityprize.zip to /content/drive/MyDrive/kaggle/works/commonlitreadabilityprize/input/commonlitreadabilityprize\n",
+            "  0% 0.00/1.13M [00:00<?, ?B/s]\n",
+            "100% 1.13M/1.13M [00:00<00:00, 79.1MB/s]\n",
+            "/content/drive/MyDrive/kaggle/works/commonlitreadabilityprize/input/commonlitreadabilityprize\n",
+            "Archive:  /content/drive/MyDrive/kaggle/works/commonlitreadabilityprize/input/commonlitreadabilityprize/commonlitreadabilityprize.zip\n",
+            "  inflating: sample_submission.csv   \n",
+            "  inflating: test.csv                \n",
+            "  inflating: train.csv               \n",
+            "/content/drive/MyDrive/kaggle/works\n"
           ],
           "name": "stdout"
         }
@@ -270,10 +260,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "5nnC41920vls"
+      },
+      "source": [
+        "# <p><font size=\"5\" color=\"orange\">4. Pull</p>\n",
+        "<p><font color=orangered>現在のDrive内のリポジトリの状態を無視して強制Pullします</p>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OOXqpwUodlbN"
+      },
+      "source": [
+        "%cd /content/drive/MyDrive/kaggle/works/$REPO_NAME\n",
+        "\n",
+        "# ローカルの内容に未保存の変更があったとしても、強制的にリモートに同期する\n",
+        "!git fetch origin\n",
+        "!git reset --hard origin/main"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "EmmzKuL8vKx_"
       },
       "source": [
-        "# Commit & Push"
+        "# <p><font size=\"5\" color=\"orange\">5. Commit & Push</p>"
       ]
     },
     {
