Colaboratory を使用して作成しました

--- a/Github_Clone_Push_file.ipynb
+++ b/Github_Clone_Push_file.ipynb
@@ -6,13 +6,10 @@
       "name": "Github-Clone-Push-file.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "ZunW8-_WpOh3",
-        "5nnC41920vls",
-        "EmmzKuL8vKx_",
         "H0L1L2l2rpgO"
       ],
       "mount_file_id": "10BS2Z2O4imqJVG8Ufqyx3B22R8rNPbs_",
-      "authorship_tag": "ABX9TyPurfEgc4zEIq0BBQYwOvyB",
+      "authorship_tag": "ABX9TyPCERm4HgIzqiZcXrThzyll",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +37,7 @@
         "id": "yQ-p-Y03gGGk"
       },
       "source": [
-        "<p><font size=\"5\">基本的に、 １セル目の</p>\n",
+        "#<p><font size=\"5\">基本的に、 １セル目の</p>\n",
         "\n",
         "<p><font size=\"7\" color=\"orange\"> >> REPO_NAME</p>\n",
         "<p><font size=\"5\">さえ書き換えれば後はセルの実行だけで上手くいきます</p>\n",
@@ -62,10 +59,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ed15693d-ec55-4632-d678-e5cc353109a5"
+        "outputId": "a16c8cbb-efe0-40e9-c7c3-1d4118420730"
       },
       "source": [
-        "%env REPO_NAME= commonlitreadabilityprize\n",
+        "%env REPO_NAME= ventilator-pressure-prediction\n",
         "# <=====　ここの値を現在のリポジトリ名(=kaggleコンペ名)に変更！！！\n",
         "\n",
         "import os\n",
@@ -87,16 +84,16 @@
         "\n",
         "os.environ['PASS'] = json_load['secrets']['pass']"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "env: REPO_NAME=commonlitreadabilityprize\n",
-            "commonlitreadabilityprize\n",
+            "env: REPO_NAME=ventilator-pressure-prediction\n",
+            "ventilator-pressure-prediction\n",
             "/content/drive/MyDrive/kaggle/works\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -106,6 +103,7 @@
         "id": "ZunW8-_WpOh3"
       },
       "source": [
+        "\n",
         "# <p><font size=\"5\">2. Cloneリポジトリ<p>\n",
         "<p><font size=\"5\">3. Kaggleからデータセットのダウンロード</p>\n",
         "\n",
@@ -118,31 +116,67 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "ppFsWd4jk7Wc",
+        "outputId": "be470338-925a-4094-a052-270c78df1adf"
+      },
+      "source": [
+        "# GitHubにSSH接続するために必要な作業作業\n",
+        "# ./.ssh/github_ssh を配置しておく配置しておく\n",
+        "# Github側に./.ssh/github_ssh.pub の中身を登録しておく\n",
+        "# KnownHostにgithub.comを登録する\n",
+        "\n",
+        "%cd /content/drive/MyDrive/kaggle/works/\n",
+        "\n",
+        "!cp -r ./.ssh /root/\n",
+        "!sudo chmod 600 /root/.ssh/github_ssh\n",
+        "!sudo chmod 600 /root/.ssh/github_ssh.pub\n",
+        "\n",
+        "!ssh-keyscan -t rsa github.com >> /root/.ssh/known_hosts"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "# github.com:22 SSH-2.0-babeld-82e76f9b\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "LDvgnGYBpJpS",
-        "outputId": "8702d6a2-a00f-470f-baa8-dfb9b077aec8"
+        "outputId": "c21e14ac-f08d-48d8-bf28-786857c686f9"
       },
       "source": [
         "%cd /content/drive/MyDrive/kaggle/works\n",
         "\n",
         "!git config --global user.name $USERNAME\n",
         "!git config --global user.email $USEREMAIL\n",
-        " \n",
-        "!git clone https://$USERNAME:$PASS@github.com/$USERNAME/$REPO_NAME.git"
+        "\n",
+        "!git clone git@github.com:goya5858/$REPO_NAME"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "/content/drive/MyDrive/kaggle/works\n",
-            "Cloning into 'commonlitreadabilityprize'...\n",
-            "remote: Enumerating objects: 11, done.\u001b[K\n",
-            "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (10/10), done.\u001b[K\n",
-            "remote: Total 11 (delta 2), reused 6 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (11/11), done.\n"
-          ],
-          "name": "stdout"
+            "Cloning into 'ventilator-pressure-prediction'...\n",
+            "Warning: Permanently added the RSA host key for IP address '140.82.113.4' to the list of known hosts.\n",
+            "remote: Enumerating objects: 18, done.\u001b[K\n",
+            "remote: Counting objects: 100% (18/18), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (16/16), done.\u001b[K\n",
+            "remote: Total 18 (delta 2), reused 9 (delta 0), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (18/18), 6.70 KiB | 685.00 KiB/s, done.\n",
+            "Resolving deltas: 100% (2/2), done.\n"
+          ]
         }
       ]
     },
@@ -162,7 +196,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BQ2MGJInC9mb",
-        "outputId": "6d5c5377-9e50-4a88-b07f-d8da3629fb25"
+        "outputId": "bf022b0d-430a-470f-8889-ea7a2c0c9292"
       },
       "source": [
         "# データのダウンロード\n",
@@ -196,10 +230,10 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Download 100%.\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -210,7 +244,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d43d9b76-94d9-4f3b-eff5-bd3c50e2bef3"
+        "outputId": "8cadb96e-32b2-4e33-f3c2-db8247473cad"
       },
       "source": [
         "!pip install --upgrade --force-reinstall --no-deps kaggle\n",
@@ -229,31 +263,26 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Collecting kaggle\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/3a/e7/3bac01547d2ed3d308ac92a0878fbdb0ed0f3d41fb1906c319ccbba1bfbc/kaggle-1.5.12.tar.gz (58kB)\n",
-            "\r\u001b[K     |█████▋                          | 10kB 15.4MB/s eta 0:00:01\r\u001b[K     |███████████▏                    | 20kB 9.6MB/s eta 0:00:01\r\u001b[K     |████████████████▊               | 30kB 7.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████▎         | 40kB 7.0MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▉    | 51kB 4.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 61kB 3.0MB/s \n",
-            "\u001b[?25hBuilding wheels for collected packages: kaggle\n",
-            "  Building wheel for kaggle (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for kaggle: filename=kaggle-1.5.12-cp37-none-any.whl size=73053 sha256=5cb9342cb738229c48df588722cca544368fc9636761a2b8b88627a76a36b9b0\n",
-            "  Stored in directory: /root/.cache/pip/wheels/a1/6a/26/d30b7499ff85a4a4593377a87ecf55f7d08af42f0de9b60303\n",
-            "Successfully built kaggle\n",
+            "  Using cached kaggle-1.5.12-py3-none-any.whl\n",
             "Installing collected packages: kaggle\n",
-            "  Found existing installation: kaggle 1.5.12\n",
+            "  Attempting uninstall: kaggle\n",
+            "    Found existing installation: kaggle 1.5.12\n",
             "    Uninstalling kaggle-1.5.12:\n",
             "      Successfully uninstalled kaggle-1.5.12\n",
             "Successfully installed kaggle-1.5.12\n",
-            "Downloading commonlitreadabilityprize.zip to /content/drive/MyDrive/kaggle/works/commonlitreadabilityprize/input/commonlitreadabilityprize\n",
-            "  0% 0.00/1.13M [00:00<?, ?B/s]\n",
-            "100% 1.13M/1.13M [00:00<00:00, 79.1MB/s]\n",
-            "/content/drive/MyDrive/kaggle/works/commonlitreadabilityprize/input/commonlitreadabilityprize\n",
-            "Archive:  /content/drive/MyDrive/kaggle/works/commonlitreadabilityprize/input/commonlitreadabilityprize/commonlitreadabilityprize.zip\n",
+            "Downloading ventilator-pressure-prediction.zip to /content/drive/MyDrive/kaggle/works/ventilator-pressure-prediction/input/ventilator-pressure-prediction\n",
+            " 94% 209M/223M [00:01<00:00, 122MB/s]\n",
+            "100% 223M/223M [00:02<00:00, 112MB/s]\n",
+            "/content/drive/MyDrive/kaggle/works/ventilator-pressure-prediction/input/ventilator-pressure-prediction\n",
+            "Archive:  /content/drive/MyDrive/kaggle/works/ventilator-pressure-prediction/input/ventilator-pressure-prediction/ventilator-pressure-prediction.zip\n",
             "  inflating: sample_submission.csv   \n",
             "  inflating: test.csv                \n",
             "  inflating: train.csv               \n",
             "/content/drive/MyDrive/kaggle/works\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -270,17 +299,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OOXqpwUodlbN"
+        "id": "OOXqpwUodlbN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c277ca85-d4b3-4ee1-d50d-759e2baaf16d"
       },
       "source": [
+        "# SSH接続のためのファイルをルートディレクトリにコピー\n",
+        "%cd /content/drive/MyDrive/kaggle/works/\n",
+        "!cp -r ./.ssh /root/\n",
+        "\n",
         "%cd /content/drive/MyDrive/kaggle/works/$REPO_NAME\n",
+        "\n",
+        "!git config --global user.name $USERNAME\n",
+        "!git config --global user.email $USEREMAIL\n",
         "\n",
         "# ローカルの内容に未保存の変更があったとしても、強制的にリモートに同期する\n",
         "!git fetch origin\n",
         "!git reset --hard origin/main"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/kaggle/works\n",
+            "/content/drive/MyDrive/kaggle/works/ventilator-pressure-prediction\n",
+            "Warning: Permanently added the RSA host key for IP address '140.82.113.4' to the list of known hosts.\n",
+            "HEAD is now at 04b6764 from mac-onpre\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -298,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v-c-2jNMu0X_",
-        "outputId": "66893f10-6af7-4b78-d17c-1ceba24ed4eb"
+        "outputId": "33c1c932-d711-4cdb-97ba-25ad988dbb1b"
       },
       "source": [
         "#　変更されたファイルをaddして、ローカルリポジトリにコミット\n",
@@ -310,17 +361,18 @@
         "!git add .\n",
         "!git commit -m 'from colab' "
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "/content/drive/MyDrive/kaggle/works/coleridgeinitiative-show-us-the-data\n",
-            "[main 2cbaf3b] from colab\n",
-            " 1 file changed, 1 insertion(+), 1 deletion(-)\n",
-            " rewrite working/csutd-1.1.0.ipynb (98%)\n"
-          ],
-          "name": "stdout"
+            "/content/drive/MyDrive/kaggle/works/ventilator-pressure-prediction\n",
+            "[main 9e47ebe] from colab\n",
+            " 2 files changed, 1 insertion(+), 2 deletions(-)\n",
+            " rewrite working/EDA2.ipynb (88%)\n",
+            " delete mode 160000 working/rapidsai-csp-utils\n"
+          ]
         }
       ]
     },
@@ -331,7 +383,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9b0bec44-9157-4924-f474-6c78b5f5f9ca"
+        "outputId": "f8bb179c-9623-4757-f55d-375ec09071f5"
       },
       "source": [
         "# リモートリポジトリにプッシュ\n",
@@ -339,25 +391,26 @@
         "# ここのPASSWORDどうにかしたいなぁ\n",
         "%cd /content/drive/MyDrive/kaggle/works/$REPO_NAME\n",
         "\n",
-        "!git remote set-url origin https://$USERNAME:$PASS@github.com/$USERNAME/$REPO_NAME.git\n",
+        "!git remote set-url origin git@github.com:goya5858/$REPO_NAME.git\n",
         "!git push origin main #ブランチ名は適宜変更"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "/content/drive/MyDrive/kaggle/works/coleridgeinitiative-show-us-the-data\n",
-            "Counting objects: 4, done.\n",
+            "/content/drive/MyDrive/kaggle/works/ventilator-pressure-prediction\n",
+            "Warning: Permanently added the RSA host key for IP address '140.82.114.4' to the list of known hosts.\n",
+            "Counting objects: 8, done.\n",
             "Delta compression using up to 2 threads.\n",
-            "Compressing objects: 100% (4/4), done.\n",
-            "Writing objects: 100% (4/4), 771 bytes | 385.00 KiB/s, done.\n",
-            "Total 4 (delta 2), reused 0 (delta 0)\n",
-            "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
-            "To https://github.com/goya5858/coleridgeinitiative-show-us-the-data.git\n",
-            "   111ea4f..2cbaf3b  main -> main\n"
-          ],
-          "name": "stdout"
+            "Compressing objects: 100% (8/8), done.\n",
+            "Writing objects: 100% (8/8), 6.11 KiB | 271.00 KiB/s, done.\n",
+            "Total 8 (delta 6), reused 0 (delta 0)\n",
+            "remote: Resolving deltas: 100% (6/6), completed with 3 local objects.\u001b[K\n",
+            "To github.com:goya5858/ventilator-pressure-prediction.git\n",
+            "   04b6764..9e47ebe  main -> main\n"
+          ]
         }
       ]
     },
