modified to use SSH

--- a/Github_Clone_Push_file.ipynb
+++ b/Github_Clone_Push_file.ipynb
@@ -9,7 +9,7 @@
         "H0L1L2l2rpgO"
       ],
       "mount_file_id": "10BS2Z2O4imqJVG8Ufqyx3B22R8rNPbs_",
-      "authorship_tag": "ABX9TyPCERm4HgIzqiZcXrThzyll",
+      "authorship_tag": "ABX9TyO4V81uVFNbTPRbWhJcvRED",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,12 @@
         "\n",
         "<p><font size=\"3\">Githubのusername, email, passはJSONファイルに書いて適切なフォルダに配置してください</p>\n",
         "<p><font size=\"3\">想定ディレクトリは</p>    \n",
-        "<p><font size=\"3\">/content/drive/MyDrive/kaggle/works/</p>\n",
+        "<p><font size=\"3\">/content/drive/MyDrive/kaggle/works/  <br>\n",
+        "|-- .ssh<br>\n",
+        "|　　+-- pemファイル類　このファイルではgithub_sshというファイル名で書いてあります<br>\n",
+        "+-- env.json<br>\n",
+        "+-- Github-Clone-Push-file.ipynb(このファイル)\n",
+        "</p>\n",
         "<p><font size=\"3\">となっています</p>\n",
         "\n",
         "<p><font size=\"3\">JSONファイルの想定フォーマットは一番下にサンプルを記載してあります </p>\n",
